generated-ssl-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysampleapp
  labels:
    app: mysampleapp
    version: v1.0
    environment: production
spec:
  replicas: 5
  selector:
    matchLabels:
      app: mysampleapp
      tier: frontend
  template:
    metadata:
      labels:
        app: mysampleapp
        tier: frontend
        version: v1.0
        environment: production
    spec:
      containers:
      - name: mycontainer
        image: priya18082004/myimage:latest
        ports:
        - containerPort: 5000
        securityContext:
          runAsNonRoot: True
          runAsUser: 1000
          runAsGroup: 3000
          readOnlyRootFilesystem: True
          allowPrivilegeEscalation: False
          capabilities:
            drop:
            - ALL
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            cpu: 1000m
            memory: 512Mi
          limits:
            cpu: 1500m
            memory: 1Gi
        volumeMounts:
        - name: efs-storage
          mountPath: /data
      volumes:
      - name: efs-storage
        persistentVolumeClaim:
          claimName: efs-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mysampleapp-service
  labels:
    app: mysampleapp
spec:
  type: NodePort
  selector:
    app: mysampleapp
    tier: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysampleapp-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  ingressClassName: alb
  tls:
  - hosts:
    - k8s-default-mysample-350d561e48-1504115715.ap-south-1.elb.amazonaws.com
    secretName: mysampleapp-ingress-tls
  rules:
  - host: k8s-default-mysample-350d561e48-1504115715.ap-south-1.elb.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mysampleapp-service
            port:
              number: 80
